--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,15 +1,18 @@
-name: Controllo pagina ogni 5 minuti
+name: Controllo pagine web
 
 on:
   schedule:
     - cron: '*/5 * * * *'  # ogni 5 minuti (UTC)
-  workflow_dispatch:       # puoi anche avviarlo a mano
+  workflow_dispatch:
+
+permissions:
+  contents: write  # necessario per commit automatici
 
 jobs:
   run-monitor:
     runs-on: ubuntu-latest
     steps:
-      - name: Clona il repo
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Python
@@ -17,11 +20,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Installa dipendenze
-        run: |
-          pip install requests
+      - name: Install dependencies
+        run: pip install requests
 
-      - name: Esegui lo script
+      - name: Run monitor
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
